# ET114_Traceability_System

./: ISSUE.md  README.md
cpu/demo/: CMakeLists.txt  main.cpp
cpu/demo/database/: 表头SQL.txt
cpu/demo/include/: gui_main.h  my_sqlite.h
cpu/demo/picodet_l_640_coco_lcnet/: infer_cfg.yml  model.pdiparams.info  model.pdmodel
cpu/demo/src/: gui_main.cpp  gui_main.ui  my_sqlite.cc
